--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "homepage": "https://github.com/jtsternberg/Shortcode_Button",
   "devDependencies": {
-    "grunt": "^0.4.5",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-jshint": "~1.1.0",
     "grunt-contrib-uglify": "~3.0.1",
     "grunt-contrib-watch": "~1.0.0"
-  }
+  },
+  "dependencies": {}
 }
